# Amazon_KDD_Cup_2023

./: .gitignore  README.md  pyproject.toml  utils.py
doc/: KDD_experiment_track.xlsx  approach.md
notebooks/: 0606_polars_bug.ipynb  0_dowload_preprocss_data.ipynb  0_playground.ipynb  1_task1_ALS_v2.ipynb  1_task1_co_visit.ipynb  1_task1_next_few_items.ipynb  1_task1_next_item_counter_v2.ipynb  1_task1_next_item_counter_v2_for_eval.ipynb  1_task1_original_1_task1_ALS.ipynb  1_task1_popular_rec.ipynb  1_task1_word2vector.ipynb  1_task1_word2vector_for_eval.ipynb  2_task1_combine_candiates_analysis.ipynb  2_task1_combine_candidate_features.ipynb  2_task1_item_and_session_features.ipynb  2_task1_rank.ipynb  2_task1_rank.py  3_task1_combine_candidate_features.ipynb  3_task1_ranker.ipynb  9999_task1_next_item_counter_v2.ipynb  9999_task1_word2vector.ipynb  Rank_task1.ipynb  debug_2_task1_rank.ipynb  kdd_task1.ipynb  rule-baseline_task1.ipynb  run_annoy.ipynb  task1_ALS.ipynb  task1_next_item_counter.ipynb  task1_next_item_counter_v2.ipynb  task1_rank.ipynb  task1_word2vector.ipynb  task2_0_getting-started.ipynb  task2_1_co_visit.ipynb  task2_1_next_few_items.ipynb  task2_1_next_item_counter.ipynb  task2_1_nicnic.ipynb  task2_1_word2vector.ipynb  task2_2_combine_candidate_features.ipynb  task2_2_combine_candidate_features_for_task1.ipynb  task2_2_item_and_session_features.ipynb  (+10 more)
notebooks/data_explore/: 0605_task3_test_data_explore.ipynb  cold_start_for_item.ipynb
src/: case_analysis.py  config.py  eval.py
