[tool.poetry]
name = "kdd-2023"
version = "0.1.0"
description = ""
authors = ["Hua Guo <huag@kth.se>"]
readme = "README.md"
packages = [{include = "kdd_2023"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyter = "^1.0.0"
numpy = "^1.24.2"
aicrowd-cli = "^0.1.15"
pyarrow = "^11.0.0"
gensim = "^4.3.1"
annoy = "^1.17.1"
polars = "^0.16.18"
matplotlib = "^3.7.1"
implicit = "^0.6.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
